--- a/assests/css/css.css
+++ b/assests/css/css.css
@@ -43,7 +43,7 @@ nav ul li a:hover {
 .background{
     background-image: url(/assests/images/architect.jpg);
     height: 100vh;
-    
+    background-repeat: no-repeat ;
     
 }
 
@@ -58,7 +58,7 @@ nav ul li a:hover {
     background-color: #000;
     color: white;
     height: 70px;
-    width: 90px;
+    width: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
